engine-net-2/examples/Errors/RuleNameUsageBlockedByVariableOfSameNameCompiled.grg
new graph "Rules.grg"

sequence s1
{
	(n:N)=init ;> r:boolean=false ;> (m:M)=r(n)
}
